First working version

--- a/Blazorships/Blazorships.Client/_ViewImports.cshtml
+++ b/Blazorships/Blazorships.Client/_ViewImports.cshtml
@@ -5,3 +5,5 @@
 @using Microsoft.AspNetCore.Blazor.Routing
 @using Blazorships.Client
 @using Blazorships.Client.Shared
+@using Blazorships.Shared.GameObjects;
+@using Blazorships.Shared.Helpers;
