--- a/Blazorships/Blazorships.Client/wwwroot/css/site.css
+++ b/Blazorships/Blazorships.Client/wwwroot/css/site.css
@@ -121,3 +121,23 @@ app {
         display: block;
     }
 }
+
+.ship-board{
+    margin: 0 auto;
+    border: 1px black solid;
+}
+.ship-tile{
+    width: 35px;
+    height: 35px;
+    vertical-align: middle;
+    border: 1px black solid;
+    text-align: center!important;
+}
+
+.red {
+    background-color: red;
+}
+
+.green{
+    background-color: green;
+}
